# snv-trafikk

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVLOG.md  IMPLEMENTATION_PLAN.md  OFFICIAL_REPORT_INTERPRETATION.md  README.md  main.py  pyproject.toml
.claude/: launch.json
.github/workflows/: pages.yml  test.yml
.tmp/matplotlib/: fontlist-v390.json
demand/od_matrices/: afternoon_1A.csv  afternoon_4A.csv  afternoon_4A_scale_0_8.csv  morning_1A.csv  morning_4A.csv  morning_4A_scale_0_8.csv
demand/routes/: afternoon_1A.rou.xml  afternoon_4A.rou.xml  afternoon_4A_scale_0_8.rou.xml  event_overlay.rou.xml  morning_1A.rou.xml  morning_4A.rou.xml  morning_4A_scale_0_8.rou.xml
docs/: DATEX2_TRAFFICDATA.md  DEVELOPMENT.md  DEVLOG.md  SCENARIO_ASSUMPTIONS.md  TRAFFIC_SIMULATION_PLAN.md
network/base/: fornebu.con.xml  fornebu.edg.xml  fornebu.net.xml  fornebu.netccfg  fornebu.nod.xml  fornebu.tll.xml  fornebu.typ.xml
network/osm/: fornebu.osm.xml  typemap.xml
network/proposed/: fornebu_v1.net.xml  fornebu_v1.patch.edg.xml  fornebu_v2.edg.xml  fornebu_v2.net.bus_lanes.add.xml  fornebu_v2.net.xml  fornebu_v2.patch.edg.xml  fornebu_v3.edg.xml  fornebu_v3.net.xml  fornebu_v3.patch.edg.xml
network/signals/: bernt_balchens.add.xml  bernt_balchens_optimized.add.xml  (+2 more)
output/: all_results.json
scripts/: 00_validate_setup.py  01_fetch_osm.py  02_build_network.py  03_generate_demand.py  04_run_simulation.py  05_analyze_results.py  06_generate_report.py  07_export_presentation_data.py  08_serve_presentation.py  09_generate_patch_files.py  10_fetch_trafikkdata.py  config.py
tests/: conftest.py  test_analysis_validation.py  test_config_hygiene.py  test_export_presentation_data.py  test_generate_demand.py  test_patch_generator.py  test_patched_run.py  test_provenance.py  test_run_simulation_stats.py  test_scenario_catalog.py  test_scenario_validation.py  test_serve_presentation.py
(+172 files in other folders)
