[project]
name = "snv"
version = "0.1.0"
description = "Open SUMO microsimulation of traffic impacts from narrowing Snarøyveien (Fornebu) under the KDP3 bygate proposal"
requires-python = ">=3.10"
dependencies = [
    "eclipse-sumo>=1.26.0",
    "imageio>=2.37.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "pyproj>=3.6.1,<3.7",
    "requests>=2.32.5",
    "sumolib>=1.26.0",
    "traci>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "types-requests>=2.32.4.20250913",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers"
markers = [
    "integration: fast cross-module integration checks",
    "slow: tests that are too slow for the default CI path",
    "sumo: tests that require SUMO binaries or full SUMO execution",
]

[tool.ruff]
line-length = 140
target-version = "py310"
extend-exclude = [
    ".plans",
    ".tmp",
    ".venv",
    "output",
    "tmp",
    "web/presentation/data/playback",
]

[tool.ruff.lint]
select = ["F"]
ignore = ["F401", "F841"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
ignore_errors = true
check_untyped_defs = false
follow_imports = "skip"
warn_unused_ignores = false
exclude = "^(\\.venv|\\.plans|output|tmp|web/presentation/data/playback)/"
